--- a/android/assets/jsons/translations/Finnish.properties
+++ b/android/assets/jsons/translations/Finnish.properties
@@ -2695,29 +2695,29 @@ Ibiza =
  # Requires translation!
 Las Palmas = 
  # Requires translation!
-Tenerife = 
+Tenerife = Teneriffa
 
 Songhai = Songhai
 Askia = Askia
  # Requires translation!
-You are an abomination to heaven and earth, the chief of ignorant savages! You must be destroyed! = 
+You are an abomination to heaven and earth, the chief of ignorant savages! You must be destroyed! = Olet kauhistus taivaalle ja maalle, sinä sivistymättömien villien päällikkö! Sinut on tuhottava!
  # Requires translation!
-Fool! You have doomed your people to fire and destruction! = 
+Fool! You have doomed your people to fire and destruction! = Typerys! Olet tuominnut kansasi tuleen ja tuhoon!
  # Requires translation!
-We have been consumed by the fires of hatred and rage. Enjoy your victory in this world - you shall pay a heavy price in the next! = 
+We have been consumed by the fires of hatred and rage. Enjoy your victory in this world - you shall pay a heavy price in the next! = Vihan ja raivon tulet ovat kuluttaneet meidät. Nauti voitostasi tässä maailmassa - seuraavassa se maksaa sinulle kalliisti!
  # Requires translation!
-I am Askia of the Songhai. We are a fair people - but those who cross us will find only destruction. You would do well to avoid repeating the mistakes others have made in the past. = 
+I am Askia of the Songhai. We are a fair people - but those who cross us will find only destruction. You would do well to avoid repeating the mistakes others have made in the past. = Olen Songhain Askia. Olemme rehti kansa - mutta joka pettää meidät, löytää itselleen vain tuhoa. Ethän toista niitä virheitä, joita eräät muut ovat menneisyydessä tehneet.
  # Requires translation!
-Can I interest you in this deal? = 
+Can I interest you in this deal? = Olisitko kiinnostunut tästä vaihtokaupasta?
 River Warlord = Jokien Sotalordi
  # Requires translation!
-Receive triple Gold from Barbarian encampments and pillaging Cities = 
+Receive triple Gold from Barbarian encampments and pillaging Cities = Kolminkertaisesti kultaa barbaarileireistä ja kaupunkien ryöstelystä
  # Requires translation!
-Embarked units can defend themselves = 
+Embarked units can defend themselves = Vesillä olevat yksiköt kykenevät puolustautumaan
  # Requires translation!
 Gao = 
  # Requires translation!
-Tombouctu = 
+Tombouctu = Timbuktu
  # Requires translation!
 Jenne = 
  # Requires translation!
@@ -2778,19 +2778,19 @@ Segou =
  # Requires translation!
 Mongolia = 
  # Requires translation!
-Genghis Khan = 
+Genghis Khan = Tsingis-kaani
  # Requires translation!
-You stand in the way of my armies. Let us solve this like warriors! = 
+You stand in the way of my armies. Let us solve this like warriors! = Olet armeijani tiellä. Ratkaistaan tämä kuin soturit!
  # Requires translation!
-No more words. Today, Mongolia charges toward your defeat. = 
+No more words. Today, Mongolia charges toward your defeat. = Jo riittää puhe. Tänään Mongolia marssii kohti tuhoasi.
  # Requires translation!
-You have hobbled the Mongolian clans. My respect for you nearly matches the loathing. I am waiting for my execution. = 
+You have hobbled the Mongolian clans. My respect for you nearly matches the loathing. I am waiting for my execution. = Olet saanut mongooliklaanit nilkuttamaan. Kunnioitukseni sinua kohtaan on melkein yhtä suuri kuin halveksuntani. Odotan teloitustani.
  # Requires translation!
-I am Temuujin, conqueror of cities and countries. Before me lie future Mongolian lands. Behind me is the only cavalry that matters. = 
+I am Temuujin, conqueror of cities and countries. Before me lie future Mongolian lands. Behind me is the only cavalry that matters. = Minä olen Temuujin, kaupunkien ja valtioiden valloittaja. Edessäni on tulevia mongoolimaita, takanani ratsuväki vailla vertaa.
  # Requires translation!
-I am not always this generous, but we hope you take this rare opportunity we give you. = 
+I am not always this generous, but we hope you take this rare opportunity we give you. = En ole aina näin antelias. Toivottavasti käytät tämän harvinaisen tilaisuuden, jonka annamme sinulle.
  # Requires translation!
-So what now? = 
+So what now? = No mitä nyt?
 Mongol Terror = Mongoolien Hirmuvalta
  # Requires translation!
 +30% Strength when fighting City-State units and cities = 
@@ -2860,13 +2860,13 @@ Nalayh =
 Tes = 
 
  # Requires translation!
-Aztecs = 
+Aztecs = Atsteekit
  # Requires translation!
 Montezuma I = 
  # Requires translation!
-Xi-miqa-can! Xi-miqa-can! Xi-miqa-can! (Die, die, die!) = 
+Xi-miqa-can! Xi-miqa-can! Xi-miqa-can! (Die, die, die!) = Xi-miqa-can! Xi-miqa-can! Xi-miqa-can! (Kuole, kuole, kuole!)
  # Requires translation!
-Excellent! Let the blood flow in raging torrents! = 
+Excellent! Let the blood flow in raging torrents! = Loistavaa! Vuotakoon veri raivoavana virtana!
  # Requires translation!
 Monster! Who are you to destroy my greatness? = 
  # Requires translation!
