--- a/android/assets/jsons/translations/Finnish.properties
+++ b/android/assets/jsons/translations/Finnish.properties
@@ -2868,13 +2868,13 @@ Xi-miqa-can! Xi-miqa-can! Xi-miqa-can! (Die, die, die!) = Xi-miqa-can! Xi-miqa-c
  # Requires translation!
 Excellent! Let the blood flow in raging torrents! = Loistavaa! Vuotakoon veri raivoavana virtana!
  # Requires translation!
-Monster! Who are you to destroy my greatness? = 
+Monster! Who are you to destroy my greatness? = Hirviö! Kuka sinä olet tuhoamaan minun suuruuteni?
  # Requires translation!
-What do I see before me? Another beating heart for my sacrificial fire. = 
+What do I see before me? Another beating heart for my sacrificial fire. = Mitä näenkään? Jälleen yksi elävä uhrituleni syötäväksi.
  # Requires translation!
-Accept this agreement or suffer the consequences. = 
+Accept this agreement or suffer the consequences. = Hyväksy tämä sopimus tai kärsi seuraukset.
  # Requires translation!
-Welcome, friend. = 
+Welcome, friend. = Tervetuloa, ystävä.
  # Requires translation!
 Sacrificial Captives = 
  # Requires translation!
@@ -2955,26 +2955,26 @@ Inca =
  # Requires translation!
 Pachacuti = 
  # Requires translation!
-Resistance is futile! You cannot hope to stand against the mighty Incan empire. If you will not surrender immediately, then prepare for war! = 
+Resistance is futile! You cannot hope to stand against the mighty Incan empire. If you will not surrender immediately, then prepare for war! = Vastustus on hyödytöntä! Et voi mitään mahtavan inkaimperiumin edessä. Jos et antaudu heti, valmistaudu sotaan!
  # Requires translation!
-Declare war on me?!? You can't, because I declare war on you first! = 
+Declare war on me?!? You can't, because I declare war on you first! = Julistit sodan minulle?!? Et voi, koska minäpä julistan ensin sinulle!
  # Requires translation!
-How did you darken the sun? I ruled with diligence and mercy—see that you do so as well. = 
+How did you darken the sun? I ruled with diligence and mercy—see that you do so as well. =  Miten pimensit auringon? Hallitsin määrätietoisesti ja armollisesti. Katso, että teet samoin.
  # Requires translation!
-How are you? You stand before Pachacuti Inca Yupanqui. = 
+How are you? You stand before Pachacuti Inca Yupanqui. = Kuka sinä olet? Olet tullut Pachacuti Inca Yupanquin eteen.
  # Requires translation!
-The Incan people offer this fair trade. = 
+The Incan people offer this fair trade. = Inkat tarjoavat tätä reilua kauppaa.
  # Requires translation!
-How are you doing? = 
+How are you doing? = Miten voit?
  # Requires translation!
-What do you want now? = 
+What do you want now? = Mitä haluat nyt?
 Great Andean Road = Mahtava Andien Tie
  # Requires translation!
-Maintenance on roads & railroads reduced by [amount]% = 
+Maintenance on roads & railroads reduced by [amount]% = Teiden ja rautateiden ylläpitokustannukset -[amount]%
  # Requires translation!
-Units ignore terrain costs when moving into any tile with Hills = 
+Units ignore terrain costs when moving into any tile with Hills = Kukkuloille nouseminen ei aiheuta liikkumishidasteita yksiköille
  # Requires translation!
-No Maintenance costs for improvements in Hills = 
+No Maintenance costs for improvements in Hills = Ei ylläpitokustannuksia kukkuloiden parannuksille
  # Requires translation!
 Cuzco = 
  # Requires translation!
@@ -3047,7 +3047,7 @@ Chucuito =
 Choquequirao = 
 
  # Requires translation!
-Denmark = 
+Denmark = Tanska
  # Requires translation!
 Harald Bluetooth = 
  # Requires translation!
@@ -3059,18 +3059,18 @@ Loki must have stood by you, for a common man alone could not have defeated me..
  # Requires translation!
 Harad Bluetooth bids you welcome to his lands, a Viking unlike any the seas and lands have ever known! Hah, are you afraid? = 
  # Requires translation!
-This is a fine deal! Even a drunk beggar would agree! = 
+This is a fine deal! Even a drunk beggar would agree! = Tämä on loistokauppa! Kerjäläinenkin ottaisi tämän vaikka juovuksissa!
  # Requires translation!
-Hail to you. = 
+Hail to you. = Tervehdys.
 Viking Fury = Viikinkien Raivo
  # Requires translation!
-+1 Movement for all embarked units = 
++1 Movement for all embarked units = +1 liikkuminen kaikille vesistöjä ylittäville yksiköille
  # Requires translation!
-Melee units pay no movement cost to pillage = 
+Melee units pay no movement cost to pillage = Lähitaisteluyksiköt voivat ryöstellä menettämättä liikkumispisteitä
  # Requires translation!
-Units pay only 1 movement point to embark and disembark = 
+Units pay only 1 movement point to embark and disembark = Vesille lähtö ja maihinnousu kuluttaa vain yhden liikkumispisteen
  # Requires translation!
-Copenhagen = 
+Copenhagen = Kööpenhamina
  # Requires translation!
 Aarhus = 
  # Requires translation!
@@ -3169,66 +3169,66 @@ Ringsted =
 Skrive = 
 
  # Requires translation!
-Milan = 
+Milan = Milano
  # Requires translation!
-You leave us no choice. War it must be. = 
+You leave us no choice. War it must be. = Et jätä meille vaihtoehtoja. Tämä tietää sotaa.
  # Requires translation!
-Very well, this shall not be forgotten. = 
+Very well, this shall not be forgotten. = Vai niin. Tätä emme unohda.
  # Requires translation!
-You fiend! History shall remember this! = 
+You fiend! History shall remember this! = Sinä paholainen! Tämä tulee jäämään historiankirjoihin!
 
  # Requires translation!
-Florence = 
+Florence = Firenze
  # Requires translation!
-And so the flower of Florence falls to barbaric hands... = 
+And so the flower of Florence falls to barbaric hands... = Ja niin Firenzen kukka putoaa barbaarien käsiin...
 
  # Requires translation!
 Rio de Janeiro = 
  # Requires translation!
-I have to do this, for the sake of progress if nothing else. You must be opposed! = 
+I have to do this, for the sake of progress if nothing else. You must be opposed! = Tämä on välttämätöntä, edistyksen nimessä. Sinua on vastustettava!
  # Requires translation!
-You can see how fruitless this will be for you... right? = 
+You can see how fruitless this will be for you... right? = Tajuathan kuinka hedelmätöntä tämä tulee olemaan sinun kannaltasi, eikö?
  # Requires translation!
-May God grant me these last wishes - peace and prosperity for Brazil. = 
+May God grant me these last wishes - peace and prosperity for Brazil. = Jumala suokoon minulle viimeiset toiveeni - rauha ja menestys Brasilialle.
 
  # Requires translation!
 Antwerp = 
  # Requires translation!
-They will write songs of this.... pray that they shall be in your favor. = 
+They will write songs of this.... pray that they shall be in your favor. = Tästä tullaan kirjoittamaan lauluja... rukoile, että niitä lauletaan sinun kunniaksesi.
 
  # Requires translation!
 Dublin = 
  # Requires translation!
-War lingers in our hearts. Why carry on with a false peace? = 
+War lingers in our hearts. Why carry on with a false peace? = Sota kipinöi sydämissämme. Miksi jatkaa rauhaa, kun sitä ei todellisuudessa ole?
  # Requires translation!
 You gormless radger! You'll dine on your own teeth before you set foot in Ireland! = 
  # Requires translation!
-A lonely wind blows through the highlands today. A dirge for Ireland. Can you hear it? = 
+A lonely wind blows through the highlands today. A dirge for Ireland. Can you hear it? = Yksinäinen tuuli puhaltaa ylämaiden halki. Valitusvirsi Irlannille. Kuuletko sen?
 
  # Requires translation!
-Tyre = 
+Tyre = Tyros
  # Requires translation!
-We never fully trusted you from the start. = 
+We never fully trusted you from the start. = Emme koskaan täysin luottaneet sinuun.
 
  # Requires translation!
 Ur = 
  # Requires translation!
-I will enjoy hearing your last breath as you witness the destruction of your realm! = 
+I will enjoy hearing your last breath as you witness the destruction of your realm! = Tulen nauttimaan kuullessani viimeisen henkäyksesi, kun todistat valtakuntasi tuhoa!
  # Requires translation!
-Why do we fight? Because Inanna demands it. Now, witness the power of the Sumerians! = 
+Why do we fight? Because Inanna demands it. Now, witness the power of the Sumerians! = Miksi taistelemme? Koska Inanna vaatii sitä. Nyt, todista sumerilaisten voima!
  # Requires translation!
-What treachery has struck us? No, what evil? = 
+What treachery has struck us? No, what evil? = Mitä petosta tämä on? Ei! Mitä pahuutta!?
 
  # Requires translation!
 Genoa = 
  # Requires translation!
-How barbaric. Those who live by the sword shall perish by the sword. = 
+How barbaric. Those who live by the sword shall perish by the sword. = Miten barbaarista. Joka elää miekasta, kuolee miekasta.
 
 Venice = Venetsia
  # Requires translation!
-You have revealed your purposes a bit too early, my friend... = 
+You have revealed your purposes a bit too early, my friend... = Paljastit tarkoituksesi vähän turhan aikaisin, ystäväni...
  # Requires translation!
-A wrong calculation, on my part. = 
+A wrong calculation, on my part. = Väärin laskelmoitu, minun puoleltani.
 
 Brussels = Brysseli
  # Requires translation!
@@ -3240,12 +3240,12 @@ Unacceptable! =
  # Requires translation!
 Sidon = 
  # Requires translation!
-What a fine battle! Sidon is willing to serve you! = 
+What a fine battle! Sidon is willing to serve you! = Hieno taistelu! Sidon palvelee sinua!
 
  # Requires translation!
 Almaty = 
  # Requires translation!
-How could we fall to the likes of you?! = 
+How could we fall to the likes of you?! = Miten hävisimme kaltaisellesi?
 
  # Requires translation!
 Edinburgh = 
@@ -4392,14 +4392,14 @@ Slinger = Ritsamies
  # Requires translation!
 Work Boats = 
  # Requires translation!
-May create improvements on water resources = 
+May create improvements on water resources = Voi parannella vesiresursseja
  # Requires translation!
-Cannot enter ocean tiles until Astronomy = 
+Cannot enter ocean tiles until Astronomy = Ei voi mennä valtamerelle ennen Astronomiaa
 
  # Requires translation!
 Trireme = 
  # Requires translation!
-Cannot enter ocean tiles = 
+Cannot enter ocean tiles = Ei voi mennä valtamerelle
 
  # Requires translation!
 Chariot Archer = 
@@ -4416,7 +4416,7 @@ War Elephant = Sotanorsu
 Spearman = Keihäsmies
 
  # Requires translation!
-Hoplite = 
+Hoplite = Hopliitti
 
  # Requires translation!
 Persian Immortal = 
@@ -4424,9 +4424,9 @@ Persian Immortal =
 +10 HP when healing = 
 
  # Requires translation!
-Catapult = 
+Catapult = Katapultti
  # Requires translation!
-Must set up to ranged attack = 
+Must set up to ranged attack = Ladattava ennen kaukohyökkäystä
  # Requires translation!
 Limited Visibility = 
 
@@ -4434,21 +4434,21 @@ Limited Visibility =
 Ballista = 
 
  # Requires translation!
-Swordsman = 
+Swordsman = Miekkamies
 
  # Requires translation!
-Legion = 
+Legion = Legioona
 Can construct roads = Voi rakentaa teitä
 
  # Requires translation!
 Mohawk Warrior = 
 
  # Requires translation!
-Horseman = 
+Horseman = Hevosmies
  # Requires translation!
 Penalty vs [unitType] = 
  # Requires translation!
-Can move after attacking = 
+Can move after attacking = Voi liikkua hyökkäämisen jälkeen
 
  # Requires translation!
 Companion Cavalry = 
@@ -4459,16 +4459,16 @@ Crossbowman = Jalkajousimies
 Chu-Ko-Nu = 
 
  # Requires translation!
-Longbowman = 
+Longbowman = Pitkäjousimies
 
  # Requires translation!
-Trebuchet = 
+Trebuchet = Vastapainokatapultti
 
  # Requires translation!
 Hwach'a = 
 
  # Requires translation!
-Longswordsman = 
+Longswordsman = Pitkämiekkamies
 
 Samurai = Samurai
 
@@ -4478,28 +4478,28 @@ Berserker =
 Amphibious = 
 
  # Requires translation!
-Pikeman = 
+Pikeman = Seiväsmies
 
  # Requires translation!
 Landsknecht = 
  # Requires translation!
-Can move immediately once bought = 
+Can move immediately once bought = Liikuteltavissa heti oston jälkeen
 
  # Requires translation!
 Galleass = 
 
  # Requires translation!
-Knight = 
+Knight = Ritari
 
  # Requires translation!
-Camel Archer = 
+Camel Archer = Kamelijousimies
 
  # Requires translation!
-Conquistador = 
+Conquistador = Konkistadori
  # Requires translation!
-Defense bonus when embarked = 
+Defense bonus when embarked = Puolustuslisäetu vesistöä ylittäessä
  # Requires translation!
-+2 Visibility Range = 
++2 Visibility Range = +2 näkyvyys
 
  # Requires translation!
 Naresuan's Elephant = 
@@ -4517,16 +4517,16 @@ Caravel =
 Turtle Ship = 
 
  # Requires translation!
-Cannon = 
+Cannon = Kanuuna
 
  # Requires translation!
-Musketman = 
+Musketman = Muskettimies
 
  # Requires translation!
-Musketeer = 
+Musketeer = Musketööri
 
  # Requires translation!
-Janissary = 
+Janissary = Janitsaari
 
  # Requires translation!
 Minuteman = 
@@ -4535,13 +4535,13 @@ Minuteman =
 Tercio = 
 
  # Requires translation!
-Frigate = 
+Frigate = Fregatti
 
  # Requires translation!
 Ship of the Line = 
 
  # Requires translation!
-Lancer = 
+Lancer = Peitsimies
 
  # Requires translation!
 Sipahi = 
@@ -4552,7 +4552,7 @@ No movement cost to pillage =
 Gatling Gun = 
 
  # Requires translation!
-Rifleman = 
+Rifleman = Kiväärimies
 
 Carrier = Lentotukialus
 Can carry 2 aircraft = Voi kantaa kahta lentokonetta
